added new html+css

--- a/first.html
+++ b/first.html
@@ -1,4 +1,14 @@
-Microsoft Windows [Version 10.0.18363.657]
-(c) 2019 Microsoft Corporation. Wszelkie prawa zastrze¾one.
+<html>
+<head>
+<link rel="stylesheet"
+href="mystyle.css">
+</head>
+<body>
+<h1>this is my very first html</h1>
+<h2>this is my very first html</h2> 
+<h6>this is my very first </h6>
+<p id="first">to zmieniam paragraph</p>
+<p style="color:red;">this is my first paragraph</p>
 
-C:\daria  d\Daria\kursit\mygit2>
+</body>
+</html>
