add tam file to html

--- a/first.html
+++ b/first.html
@@ -10,5 +10,17 @@ href="mystyle.css">
 <p id="first">to zmieniam paragraph</p>
 <p style="color:red;">this is my first paragraph</p>
 
+<table border=1>
+<tr>
+<th>first name</th>
+<th>last name name</th>
+</tr>
+
+<tr>
+<td>Robert</td>
+<td>Jonnson</td>
+</tr>
+</table>
+
 </body>
 </html>
