--- a/first.html
+++ b/first.html
@@ -11,6 +11,7 @@ href="mystyle.css">
 <p style="color:red;">this is my first paragraph</p>
 
 <table border=1>
+
 <tr>
 <th>first name</th>
 <th>last name name</th>
@@ -21,6 +22,12 @@ href="mystyle.css">
 <td>Jonnson</td>
 </tr>
 </table>
+
+<ul>
+<li>pierwaszy element</li>
+<li>drugi element</li>
+<li>trzeci element</li>
+</ul>
 
 </body>
 </html>
