added first form

--- a/first.html
+++ b/first.html
@@ -29,5 +29,18 @@ href="mystyle.css">
 <li>trzeci element</li>
 </ul>
 
+<form>
+
+<label>first name:</label>
+<input type="text" value ="John"><br>
+<lable>last name: </lable>
+<input type="text" value ="Kowalski"><br>
+<input type="submit" value="Submit">
+
+</form>
+
+
+
+
 </body>
 </html>
