--- a/first.html
+++ b/first.html
@@ -24,7 +24,7 @@ href="mystyle.css">
 </table>
 
 <ul>
-<li>pierwaszy element</li>
+<li id="demo">pierwaszy element</li>
 <li>drugi element</li>
 <li>trzeci element</li>
 </ul>
@@ -39,9 +39,13 @@ href="mystyle.css">
 
 </form>
 
-
+<script>
+document.getElementById("demo").innerHTML = "Hello JS";
+</script>
 
 <iframe src="demo-iframe.htm" style height="200" width="300"> </iframe>
+
+
 
 
 </body>
